Fix alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -66,3 +66,7 @@
 .mt-1 {
   margin-top: 1em!important;
 }
+
+.m-0 {
+  margin: 0!important;
+}
